# controller/catalog/v1/catalog_operation.go
@@ -2,26 +2,12 @@ package v1
 
 import (
 	"github.com/cihub/seelog"
-	"github.com/hfeng101/niwo/storage"
+	"github.com/hfeng101/niwo/storage/mysql"
 	"github.com/hfeng101/niwo/utils/consts"
 	"github.com/kataras/iris/v12"
 )
 
 //根据关键字获取记录列表
-// @title Swagger Example API
-// @version 1.0
-// @description This is a sample server Petstore server.
-// @termsOfService http://swagger.io/terms/
-
-// @contact.name API Support
-// @contact.url http://www.swagger.io/support
-// @contact.email support@swagger.io
-
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
-// @host petstore.swagger.io
-// @BasePath /v2
 func GetRecordListByKey(ctx iris.Context) {
 	resBody := &ResponseContent{
 		Code: consts.SUCCESSCODE,
@@ -111,22 +97,18 @@ func GetRecordList(ctx iris.Context) {
 		Message: consts.SUCCESSCODEMESSAGE,
 		Data: nil,
 	}
-	req := &GetRecordListReq{}
-
 	defer ctx.JSON(resBody)
-	if err := ctx.ReadJSON(req); err != nil {
-		seelog.Errorf("Input param is valid, err is %v",err.Error())
-		resBody.Code = consts.ERRORCODE
-		resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
-		return
-	}
 
+	catalog := ctx.Request().URL.Query().Get("catalog")
+
+	//catalog = ctx.URLParam("catalog")
+	//seelog.Infof("catalog 444444444 from url is %v", catalog)
 	//从数据库里获取列表，并分列显示
-	switch req.catalog {
+	switch catalog {
 		case consts.PERSONAGE:
-			personageRecordList := []*storage.PersonageRecordList{}
+			personageRecordList := []*mysql.PersonageRecordList{}
 			//从数据库里获取列表，并分列显示
-			dbHandle := storage.GetMysqlDbHandle()
+			dbHandle := mysql.GetMysqlDbHandle()
 			//关键字模糊查找
 			if dbHandle.Find(personageRecordList) == nil {
 				seelog.Errorf("Get personage record list failed from mysql failed")
@@ -137,9 +119,9 @@ func GetRecordList(ctx iris.Context) {
 
 			resBody.Data = personageRecordList
 		case consts.SPORT:
-			sportRecordList := []*storage.SportRecordList{}
+			sportRecordList := []*mysql.SportRecordList{}
 			//从数据库里获取列表，并分列显示
-			dbHandle := storage.GetMysqlDbHandle()
+			dbHandle := mysql.GetMysqlDbHandle()
 			//关键字模糊查找
 			if dbHandle.Find(sportRecordList) == nil {
 				seelog.Errorf("Get sport record list failed from mysql failed")
@@ -150,9 +132,9 @@ func GetRecordList(ctx iris.Context) {
 
 			resBody.Data = sportRecordList
 		case consts.ECONOMICS:
-			economicsRecordList := []*storage.EconomicsRecordList{}
+			economicsRecordList := []*mysql.EconomicsRecordList{}
 			//从数据库里获取列表，并分列显示
-			dbHandle := storage.GetMysqlDbHandle()
+			dbHandle := mysql.GetMysqlDbHandle()
 			//关键字模糊查找
 			if dbHandle.Find(economicsRecordList) == nil {
 				seelog.Errorf("Get economics record list failed from mysql failed")
@@ -163,9 +145,9 @@ func GetRecordList(ctx iris.Context) {
 
 			resBody.Data = economicsRecordList
 		case consts.MILITARY:
-			militaryRecordList := []*storage.MilitaryRecordList{}
+			militaryRecordList := []*mysql.MilitaryRecordList{}
 			//从数据库里获取列表，并分列显示
-			dbHandle := storage.GetMysqlDbHandle()
+			dbHandle := mysql.GetMysqlDbHandle()
 			//关键字模糊查找
 			if dbHandle.Find(militaryRecordList) == nil {
 				seelog.Errorf("Get military record list failed from mysql failed")
@@ -176,9 +158,9 @@ func GetRecordList(ctx iris.Context) {
 
 			resBody.Data = militaryRecordList
 		case consts.ENTERTAINMENT:
-			entertainmentRecordList := []*storage.EntertainmentRecordList{}
+			entertainmentRecordList := []*mysql.EntertainmentRecordList{}
 			//从数据库里获取列表，并分列显示
-			dbHandle := storage.GetMysqlDbHandle()
+			dbHandle := mysql.GetMysqlDbHandle()
 			//关键字模糊查找
 			if dbHandle.Find(entertainmentRecordList) == nil {
 				seelog.Errorf("Get entertainment record list failed from mysql failed")
@@ -203,19 +185,19 @@ func GetPersonageRecordList(ctx iris.Context) {
 		Message: consts.SUCCESSCODEMESSAGE,
 		Data: nil,
 	}
-	req := &GetPersonageRecordListReq{}
+	//req := &GetPersonageRecordListReq{}
 
 	defer ctx.JSON(resBody)
-	if err := ctx.ReadJSON(req); err != nil {
-		seelog.Errorf("Input param is valid, err is %v",err.Error())
-		resBody.Code = consts.ERRORCODE
-		resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
-		return
-	}
+	//if err := ctx.ReadJSON(req); err != nil {
+	//	seelog.Errorf("Input param is valid, err is %v",err.Error())
+	//	resBody.Code = consts.ERRORCODE
+	//	resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
+	//	return
+	//}
 
-	personageRecordList := []*storage.PersonageRecordList{}
+	personageRecordList := []*mysql.PersonageRecordList{}
 	//从数据库里获取列表，并分列显示
-	dbHandle := storage.GetMysqlDbHandle()
+	dbHandle := mysql.GetMysqlDbHandle()
 	//关键字模糊查找
 	if dbHandle.Find(personageRecordList) == nil {
 		seelog.Errorf("Get personage record list failed from mysql failed")
@@ -236,19 +218,19 @@ func GetSportRecordList(ctx iris.Context) {
 		Message: consts.SUCCESSCODEMESSAGE,
 		Data: nil,
 	}
-	req := &GetSportRecordListReq{}
+	//req := &GetSportRecordListReq{}
 
 	defer ctx.JSON(resBody)
-	if err := ctx.ReadJSON(req); err != nil {
-		seelog.Errorf("Input param is valid, err is %v",err.Error())
-		resBody.Code = consts.ERRORCODE
-		resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
-		return
-	}
+	//if err := ctx.ReadJSON(req); err != nil {
+	//	seelog.Errorf("Input param is valid, err is %v",err.Error())
+	//	resBody.Code = consts.ERRORCODE
+	//	resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
+	//	return
+	//}
 
-	sportRecordList := []*storage.SportRecordList{}
+	sportRecordList := []*mysql.SportRecordList{}
 	//从数据库里获取列表，并分列显示
-	dbHandle := storage.GetMysqlDbHandle()
+	dbHandle := mysql.GetMysqlDbHandle()
 	//关键字模糊查找
 	if dbHandle.Find(sportRecordList) == nil {
 		seelog.Errorf("Get sport record list failed from mysql failed")
@@ -267,19 +249,19 @@ func GetEconomicsRecordList(ctx iris.Context) {
 		Message: consts.SUCCESSCODEMESSAGE,
 		Data: nil,
 	}
-	req := &GetEconomicsRecordListReq{}
+	//req := &GetEconomicsRecordListReq{}
 
 	defer ctx.JSON(resBody)
-	if err := ctx.ReadJSON(req); err != nil {
-		seelog.Errorf("Input param is valid, err is %v",err.Error())
-		resBody.Code = consts.ERRORCODE
-		resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
-		return
-	}
+	//if err := ctx.ReadJSON(req); err != nil {
+	//	seelog.Errorf("Input param is valid, err is %v",err.Error())
+	//	resBody.Code = consts.ERRORCODE
+	//	resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
+	//	return
+	//}
 
-	economicsRecordList := []*storage.EconomicsRecordList{}
+	economicsRecordList := []*mysql.EconomicsRecordList{}
 	//从数据库里获取列表，并分列显示
-	dbHandle := storage.GetMysqlDbHandle()
+	dbHandle := mysql.GetMysqlDbHandle()
 	//关键字模糊查找
 	if dbHandle.Find(economicsRecordList) == nil {
 		seelog.Errorf("Get economics record list failed from mysql failed")
@@ -298,19 +280,19 @@ func GetMilitaryRecordList(ctx iris.Context) {
 		Message: consts.SUCCESSCODEMESSAGE,
 		Data: nil,
 	}
-	req := &GetMilitaryRecordListReq{}
+	//req := &GetMilitaryRecordListReq{}
 
 	defer ctx.JSON(resBody)
-	if err := ctx.ReadJSON(req); err != nil {
-		seelog.Errorf("Input param is valid, err is %v",err.Error())
-		resBody.Code = consts.ERRORCODE
-		resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
-		return
-	}
+	//if err := ctx.ReadJSON(req); err != nil {
+	//	seelog.Errorf("Input param is valid, err is %v",err.Error())
+	//	resBody.Code = consts.ERRORCODE
+	//	resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
+	//	return
+	//}
 
-	militaryRecordList := []*storage.MilitaryRecordList{}
+	militaryRecordList := []*mysql.MilitaryRecordList{}
 	//从数据库里获取列表，并分列显示
-	dbHandle := storage.GetMysqlDbHandle()
+	dbHandle := mysql.GetMysqlDbHandle()
 	//关键字模糊查找
 	if dbHandle.Find(militaryRecordList) == nil {
 		seelog.Errorf("Get military record list failed from mysql failed")
@@ -329,19 +311,19 @@ func GetEntertainmentRecordList(ctx iris.Context) {
 		Message: consts.SUCCESSCODEMESSAGE,
 		Data: nil,
 	}
-	req := &GetEntertainmentRecordListReq{}
+	//req := &GetEntertainmentRecordListReq{}
 
 	defer ctx.JSON(resBody)
-	if err := ctx.ReadJSON(req); err != nil {
-		seelog.Errorf("Input param is valid, err is %v",err.Error())
-		resBody.Code = consts.ERRORCODE
-		resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
-		return
-	}
+	//if err := ctx.ReadJSON(req); err != nil {
+	//	seelog.Errorf("Input param is valid, err is %v",err.Error())
+	//	resBody.Code = consts.ERRORCODE
+	//	resBody.Message = consts.ERRORCODEMESSAGE + err.Error()
+	//	return
+	//}
 
-	entertainmentRecordList := []*storage.EntertainmentRecordList{}
+	entertainmentRecordList := []*mysql.EntertainmentRecordList{}
 	//从数据库里获取列表，并分列显示
-	dbHandle := storage.GetMysqlDbHandle()
+	dbHandle := mysql.GetMysqlDbHandle()
 	//关键字模糊查找
 	if dbHandle.Find(entertainmentRecordList) == nil {
 		seelog.Errorf("Get entertainment record list failed from mysql failed")
