# router/register/catalog.go
@@ -10,7 +10,7 @@ import (
 func CatalogRouteRegister(app *iris.Application) {
 	catalogParty := app.Party("/v1/catalog")
 
-	catalogParty.Get("/listByKey",v1.GetRecordListByKey)
+	catalogParty.Post("/listByKey",v1.GetRecordListByKey)
 	catalogParty.Get("/list",v1.GetRecordList)
 
 	catalogParty.Get("/personageRecordList",v1.GetPersonageRecordList)
